--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
                                     <mainClass>ForgeServerLauncher</mainClass>
                                 </transformer>
                             </transformers>
+                            <!-- 确保生成的 JAR 文件名与 finalName 一致 -->
+                            <finalName>${project.build.finalName}</finalName>
                         </configuration>
                     </execution>
                 </executions>
