--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,4 @@ jobs:
         with:
           name: forge-server-launcher
           path: target/forge-server-launcher.jar
+          if-no-files-found: warn
