--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: forge-server-launcher
-          path: target/forge-server-launcher.jar
+          path: target/forge-server-launcher-*.jar
           if-no-files-found: warn
