--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>top.zeronight</groupId>
     <artifactId>ForgeServerLauncher</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Forge Server Launcher</name>
     <description>A launcher for Forge/NeoForge Minecraft servers</description>
-    <url>https://example.com</url>
+    <url>https://www.wuye2004.top</url>
 
     <properties>
         <maven.compiler.release>17</maven.compiler.release>
