--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Upload JAR as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: forge-server-launcher
+          name: forge-server-launcher-action
           path: target/ForgeServerLauncher-*.jar
           if-no-files-found: warn
