--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>top.zeronight</groupId>
     <artifactId>ForgeServerLauncher</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-beta.1</version>
     <name>Forge Server Launcher</name>
     <description>A launcher for Forge/NeoForge Minecraft servers</description>
     <url>https://www.wuye2004.top</url>
