--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ForgeServerLauncher</mainClass>
+                            <mainClass>MainLauncher</mainClass>
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
@@ -46,7 +46,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ForgeServerLauncher</mainClass>
+                                    <mainClass>MainLauncher</mainClass>
                                 </transformer>
                             </transformers>
                             <!-- 确保生成的 JAR 文件名与 finalName 一致 -->
